# ani-gui

./: CMakeLists.txt  README.md
includes/: MyWindow.h  Requester.h
src/: MyWindow.cpp  Requester.cpp  main.cpp
